# parted

./: .dir-locals.el  .gitignore  CONVENTIONS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/: helpers.py
apps/artist/: apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/artist/migrations/: 0001_initial.py  0002_genre_artist_genres_artist_main_genre.py  0003_alter_artist_genres_alter_artist_main_genre_and_more.py  0004_rename_artist_artistprofile.py  0005_artistprofile_bio_artistprofile_instagram_and_more.py
apps/templates/: base.html
apps/templates/account/: email_confirm.html  login.html  password_reset.html  password_reset_from_key.html  signup.html  verification_sent.html
apps/templates/base/: about.html  base.html  index.html
apps/templates/base/partials/: menu_items.html
apps/templates/components/: artist_card.html  artist_dashboard.html  artist_grid.html  artist_section.html
apps/templates/pages/: about.html  home_feed.html  index.html  news_feed.html  profile.html
apps/templates/pages/artist/: dashboard.html  profile.html
apps/templates/partials/: menu_items.html  messages.html
apps/user/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/user/management/commands/: seed.py
apps/user/migrations/: 0001_initial.py  0002_fanprofile.py  0003_remove_user_username.py  0004_fanprofile_profile_image_alter_fanprofile_bio.py  0005_alter_fanprofile_user.py
apps/user/tests/: test_models.py  test_views.py
config/: adapter.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py
factories/: __init__.py  artist.py  user.py  utils.py
tests/: conftest.py  utils.py
tests/test_apps/test_artist/: test_views.py
tests/test_apps/test_user/: test_views.py
(+1 files in other folders)
