[project]
name = "parted"
version = "0.1.0"
description = ""
authors = [
    {name = "Gopar",email = "gopardaniel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]

[tool.poetry]
packages = [{include = "parted", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
