[project]
name = "parted"
version = "0.1.0"
description = "A christian music app"
authors = [
    {name = "Gopar",email = "gopardaniel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "django-cotton (>=1.5.2,<2.0.0)",
    "django-htmx (>=1.22.0,<2.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
